2007-10-01  daniel g. siegel  <dgsiegel@gmail.com>

	* ChangeLog,
	  www.gnome.org/projects/cheese/index.html: 
	  alter cheese dependencies

2007-09-30  daniel g. siegel  <dgsiegel@gmail.com>

	* ChangeLog,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/screenshots.html: 
	  fix some bugs in the cheese page

2007-09-30  daniel g. siegel  <dgsiegel@gmail.com>

	* ChangeLog,
	  www.gnome.org/projects/cheese/data/images/application-x-executable.png,
	  www.gnome.org/projects/cheese/data/images/dialog-information.png,
	  www.gnome.org/projects/cheese/data/images/preferences-desktop-assistive-technology.png,
	  www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
	  www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/Makefile.am,
	  www.gnome.org/projects/cheese/screenshots.html: 
	  bug removal and a bit fancy up on the cheese page

2007-09-29  daniel g. siegel  <dgsiegel@gmail.com>

	* ChangeLog,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/Makefile.am: 
	  news entry: new website for cheese

2007-09-29  daniel g. siegel  <dgsiegel@gmail.com>

	* ChangeLog,
	  www.gnome.org/projects/cheese/screenshots.html,
	  www.gnome.org/projects/cheese/data/images/preferences-desktop-wallpaper.png,
	  www.gnome.org/projects/cheese/data/images/internet-group-chat.png,
	  www.gnome.org/projects/cheese/data/images/system-users.png,
	  www.gnome.org/projects/cheese/data/images/video-x-generic.png,
	  www.gnome.org/projects/cheese/data/images/applications-development.png,
	  www.gnome.org/projects/cheese/data/images/preferences-desktop-assistive-technology.png,
	  www.gnome.org/projects/cheese/data/images/package-x-generic.png,
	  www.gnome.org/projects/cheese/data/themes/cheese,
	  www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
	  www.gnome.org/projects/cheese/Makefile.am,