@@ -32,16 +32,13 @@
     <div id="body">
 
       <div id="top">
-
         <a href="screenshots.html"> <img src="data/images/cheese-big.png" alt="cheese!"/> </a>
-
       </div><!-- top -->
 
       <div id="bottom">
-
         <div id="bottomLeft">
-
           <div id="bottomLeftLeft">
+
             <h2>What is Cheese?</h2>
 
             <p>
@@ -135,9 +132,9 @@
             and video processing, enabling us to add real-time effects as well as
             eye-candy. We are already considering features such as live
             incrustation of props and backgrounds, motion tracking, automatic
-            hackergotchi creation, raffle mode and much more..<br />
-            If you are interested, have a look at our 
-            <a href="http://live.gnome.org/Cheese/Ideas"> crazy ideas</a>
+            hackergotchi creation, raffle mode and much more..
+            If you want to know more, have a look at our 
+            <a href="http://live.gnome.org/Cheese/Ideas">crazy ideas</a>
             and a very ambitious
             <a href="http://live.gnome.org/Cheese/Roadmap">roadmap</a>.
             </p>
@@ -185,6 +182,7 @@
             <ul>
               <li><a href="http://digg.com/linux_unix/Cheese_A_GNOME_Webcam_application">We were digged</a></li>
               <li><a href="http://arstechnica.com/journals/linux.ars/2007/08/21/cheese-brings-photoboth-functionality-to-linux">ArsTechnica Review</a></li>
+              <li><a href="http://desdeamericaconamor.org/blog/node/383">Quim Gil on Cheese</a></li>
             </ul>
 
             <h2>What's the "Anti-toc2 and pro-autotools flames"-counter state?  </h2>
@@ -192,9 +190,7 @@
             the counter state is: 9 (and counting...) ;)
             </p>
 
-
           </div>
-
         </div>
 
         <div id="bottomRight">
@@ -261,9 +257,7 @@
 
 
         </div>
-
       </div><!-- bottom -->
-
     </div><!-- body -->
 
     <div id="copyright">
@@ -271,9 +265,13 @@
       <br />
       GNOME and the foot logo are trademarks of the GNOME Foundation.
       <br />
-      <a href="http://validator.w3.org/check/referer">Optimized</a> for <a href="http://www.w3.org/">standards</a>.</p>
+      <a href="http://validator.w3.org/check/referer">Optimized</a> for <a href="http://www.w3.org/">standards</a>.
+      <br />
+      <script type="text/javascript">
+        document.write("Last Updated: " + document.lastModified );
+      </script>
+      </p>
     </div>
-
 
   </body>
 </html>
