@@ -2,6 +2,12 @@
 
 	* ChangeLog,
 	  www.gnome.org/projects/cheese/index.html: 
+	  add a press-link and the last-modified time
+
+2007-10-01  daniel g. siegel  <dgsiegel@gmail.com>
+
+	* ChangeLog,
+	  www.gnome.org/projects/cheese/index.html: 
 	  alter cheese dependencies
 
 2007-09-30  daniel g. siegel  <dgsiegel@gmail.com>
